# Ionization-Based-Logic-System-Simulation

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MODEL_RAPORU.md  README.md  SECURITY.md  advanced_models.py  plasma_model.py  pyproject.toml  requirements.txt  run_experiments.py  test_plasma_model.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
